--- a/index.html
+++ b/index.html
@@ -8,17 +8,22 @@
 </head>
 
 <body>
-	<div>
-		<h1>Willkommen auf meiner Homepage!</h1>
-		<p>Auf was kommt es hier an?</p>
-		<ul>
-			<li>1. Auf mich!</li>
-			<li>2. Auf mich!</li>
-			<li>3. Auf mich!</li>
-		</ul>
-		<br>
-		<b>Bin ich wirklich so gut?</b>
-	</div>
+	<h1>Willkommen auf meiner Homepage!</h1>
+
+	<p>Auf was kommt es hier an?</p>
+	<ul>
+		<li>1. Auf mich!</li>
+		<li>2. Auf mich!</li>
+		<li>3. Auf mich!</li>
+	</ul>
+
+	<b>Bin ich wirklich so gut?</b>
+	<ol>
+		<li>Ja</li>
+		<li>Nein</li>
+		<li>Vielleicht</li>
+	</ol>
+
 </body>
 
 </html>
