--- a/index.html
+++ b/index.html
@@ -3,26 +3,48 @@
 <html>
 
 <head>
-<meta charset="UTF-8">
-<title>MC Homepage!</title>
+
+<link type="text/css" rel="stylesheet" href="stylesheet.css" />
+
+<title>Murat | König | Kaiser</title>
 </head>
 
 <body>
-	<h1>Willkommen auf meiner Homepage!</h1>
 
-	<p>Auf was kommt es hier an?</p>
-	<ul>
-		<li>1. Auf mich!</li>
-		<li>2. Auf mich!</li>
-		<li>3. Auf mich!</li>
-	</ul>
+	<h1>Mybook</h1>
 
-	<b>Bin ich wirklich so gut?</b>
-	<ol>
-		<li>Ja</li>
-		<li>Nein</li>
-		<li>Vielleicht</li>
-	</ol>
+	<div>
+
+		<ul>
+			<li>Ihr sollt Murats Regeln befolgen:
+
+				<ol>
+					<li>Regel: Ihr sollt bescheiden sein!</li>
+					<li>Regel: Ihr sollt gutmütig sein!</li>
+					<li>Regel: Ihr sollt für andere Vorbild sein!</li>
+					<li>Regel: Ihr sollt wissbegierig sein!</li>
+				</ol>
+			</li>
+		</ul>
+
+	</div>
+
+
+
+	<p>
+		Was habt Ihr davon <em>mir</em> nicht zu gehorchen?
+	</p>
+
+	<p>
+		<strong>Nichts</strong>!
+	</p>
+
+	<img
+		src="http://www.brautbox.de/local/albums/article1082/musik-liegt-in-der-luft_hpv.jpg" />
+
+	<p>
+		<a href="https://www.google.de/#q=musik">Musik</a> ist<em> schön</em>
+	</p>
 
 </body>
 
