--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
 <head>
 
+<meta charset="utf-8" />
+
 <link type="text/css" rel="stylesheet" href="stylesheet.css" />
 
 <title>Murat | König | Kaiser</title>
